<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_350dp"
        android:layout_height="@dimen/dimen_200dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:src="@drawable/login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registrationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="@dimen/dimen_30sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:textColor="@color/purple_700"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerFullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/registrationText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/registerFullname"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/registerEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/registerConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/registerPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/confirm_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"
        app:layout_constraintTop_toBottomOf="@id/registerConfirmPassword"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:layout_marginStart="@dimen/dimen_30dp"
        android:layout_marginEnd="@dimen/dimen_30dp"
        android:text="@string/submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>